--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
+    <title>Image Generator - by KarlinCoder</title>
 
-    <title>Image Generator</title>
+    <meta property="og:title" content="Image Generator - by KarlinCoder" />
+    <meta
+      property="og:description"
+      content="Genera imágenes únicas basadas en tus ideas con un potente generador de imágenes multi-modelo."
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://txt2img.karlincoder.com/" />
   </head>
   <body>
     <div id="root"></div>
