Adding Translation Support

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://txt2img.karlincoder.com/" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="overflow-x: hidden"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
